2009-09-04  Sancho Lerena zslerena@artica.es>

	* pandora_server.spec: Updated dependency for sudo.

	* util/tentacle_serverd: su cannot work as expected in SLES11, so
	we fallback to sudo again.

2009-09-03  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Fixed some warning on non init
	  variables.

	* lib/PandoraFMS/Core.pm: Now uses alert name instead alert description
	in event description.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Decode HTML entities for all alert types.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: HTML entities in alert fields are properly
	  decoded. Alert emails can be sent to multiple comma separated
	  addresses.

2009-09-02  Sancho Lerena <slerena@artica.es> 

	*  lib/PandoraFMS/PluginServer.pm, util/pandora_exec: Nagis plugin 
	support implemented and working.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the matches_value alert option (was not
	  working properly).

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Removed the inhibit_alerts configuration
	  token. Alert inhibition is configured on a per-agent basis.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Added sample configurations for
	  inhibit_alerts and use_xml_timestamp.

	* lib/PandoraFMS/Config.pm: Added the inhibit_alerts configuration
	  token.

	* lib/PandoraFMS/Core.pm: Added the option to inhibit agent alerts if
	  the parent has fired a critical alert.

	* lib/PandoraFMS/DataServer.pm: Use the XML file last modification time 
	  if no timestamp is specified.

2009-09-01 Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Using chkconfig for service install. Using the new
	logrotate config for automatic logfile management. 

	* pandora_server_installer: Using new logrotate config file.
	